- backend - novos endpoints de delete
